Improvements to downloading.

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -35,7 +35,7 @@
     <div id="download-completed" style="display: none;"> 
       <p>Download Completed</p>
       <a id="downloadLink" href="" download>Download</a>
-      <button onclick="DisplayPreDownload()" >Download Another</button>
+      <button class="btn btn-primary" onclick="DisplayPreDownload()" >Download Another</button>
     </div>
 
     
