--- a/App/templates/bootstrap_wtf.html
+++ b/App/templates/bootstrap_wtf.html
@@ -1,7 +1,11 @@
-{% macro form_field(field, field_id) %}
+{% macro form_field(field,  field_id, field_class="form-control", useLabel=True) %}
   <div>
-    {{ field.label(class="form-label") }}
-    {{ field(class="form-control", id=field_id) }}
+    {% if useLabel %}
+      {{ field.label(class="form-label") }}
+    {% endif %}
+
+    {{ field(class=field_class, id=field_id) }}
+
     {% if field.errors %}
       <ul class="errors">
         {% for error in field.errors %}
