--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -2,50 +2,54 @@
 {% import 'bootstrap_wtf.html' as wtf %}
 
 {% block content %}
-  <div class="container">
+  <div class="container-fluid">
     
     <!-- TITLE BAR -->
-    <h1>Welcome to the YouTube Downloader</h1>
-    <!-- Before download has occurred -->
-    <div id="pre-download"> 
-      <p>Enter the URL of the YouTube video you want to download</p>
-      <form id="downloadForm">
-        {{ form.hidden_tag() }}
-        {{ wtf.form_field(form.video_url, "id_videourl") }}
-        {{ wtf.form_field(form.download_type, "id_downloadtype") }}
-        {{ wtf.form_field(form.quality, "id_quality") }}
-        {{ wtf.form_field(form.submit, "id_submit", "btn btn-primary", False) }}
-      
-      </form>
-      
-    </div>
-    <!-- DURING DOWNLOAD -->
-    <div id="download-started" style="display: none;"> 
-      <!-- <img >  put here the thumbnail-->
-      <p>Download Started</p>
-      <div class="progress" style="height: 20px;">
-        <div id="progressBar" class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <h1>YouTube video downloader</h1>
+    <div id="download-controls" class="row" style="min-height: 360px;">
+      <!-- Before download has occurred -->
+      <div id="pre-download" class="text-start"> 
+        <p>Enter the URL of the YouTube video you want to download</p>
+        <form id="downloadForm">
+          {{ form.hidden_tag() }}
+          {{ wtf.form_field(form.video_url, "id_videourl") }}
+          {{ wtf.form_field(form.download_type, "id_downloadtype") }}
+          {{ wtf.form_field(form.quality, "id_quality") }}
+          <div class ="text-center">
+          {{ wtf.form_field(form.submit, "id_submit", "btn btn-primary m-2", False) }}
+          </div>
+        </form>
+        
       </div>
-      <p id="progressNumber"> Download: 0% </p>
-      <p id="progressMessage">  </p>
-    </div>
+      <!-- DURING DOWNLOAD -->
+      <div id="download-started" style="display: none;"> 
+        <!-- <img >  put here the thumbnail-->
+        <p>Download Started</p>
+        <div class="progress" style="height: 20px;">
+          <div id="progressBar" class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <p id="progressNumber"> Download: 0% </p>
+        <p id="progressMessage">  </p>
+      </div>
 
-    <!-- Download completed -->
-    <div id="download-completed" style="display: none;"> 
-      <p>Download Completed</p>
-      <a id="downloadLink" href="" download>Download</a>
-      <button class="btn btn-primary" onclick="DisplayPreDownload()" >Download Another</button>
+      <!-- Download completed -->
+      <div id="download-completed" style="display: none;"> 
+        <p>Download Completed</p>
+        <a id="downloadLink" href="" download>Download</a>
+        <button class="btn btn-primary m-2" onclick="DisplayPreDownload()" >Download Another</button>
+      </div>
     </div>
 
     <!-- downloads listed-->
-     <div id="downloads-container">
-      <div id="downloads-title">
+     <hr>
+     <div id="downloads-container" class="row mt-5">
+      <div id="downloads-title" class="text-center">
         <h2>Downloads</h2>
       </div>
-      <div> 
-              <button class="btn btn-primary"> Download All </button>
+      <div class="text-end"> 
+              <a href="download_all" class="btn btn-primary m-2" > Download All </a>
 
-              <button class="btn btn-danger"> Delete all </button>
+              <button class="btn btn-danger m-2" onclick="DeleteAll()"> Delete all </button>
       </div>
       <div id="downloads">
         <table id="download-table" class="table table-striped table-hover">
@@ -53,7 +57,7 @@
             <tr>
               <th>File Name</th>
               <th></th>
-              <th>Actions</th>
+              <th class="text-end px-4" >Actions</th>
             </tr>
           </thead>
           <tbody>
